# GenAI-Slack-Thread-Reader-and-Chat-Bot

./: .env  .gitignore  Dockerfile  README.md  action_item_generator.py  app.py  app_test.py  db.py  pyproject.toml  release-note.md  release_config.toml  requirements.txt  test_bot1.py  test_jira.py  test_ui.py  version.txt
.github/workflows/: Deploy.yml  health-check.yaml  health-check.yml  release.yml  slack-bot-e2e.yml  test-runner.yml  test.yml  testgit.yaml  testgithubaction.yaml
backup/: action_item_generator - llama.py
chains/: analyze_thread.py  chat_chain_mcp.py  llm_provider.py  preanalyze.py  stats_store.py
deploy-dev/: deployment.yaml  pv.yaml  pvc.yaml
deploy-prod/: deployment.yaml  pvc.yaml
helper/: MainToDo.py  dm_utils.py  llm_utils.py  utils.py
helper/backup/: action_item_generator - granite.py  app_base.py
tests/: test_analyze_thread.py  test_app.py  test_app_unit.py  test_bot.py  test_chat_chain_mcp.py  test_ui.py
utils/: auth.py  channel_rag.py  db_utils.py  export_pdf.py  file_utils.py  global_kb.py  health.py  innovation_report.py  jira_config.py  jira_integration.py  jira_mcp_client.py  jira_mcp_manager.py  jira_oauth_handler.py  jira_query_processor.py  jira_response_formatter.py  oauth_callback_server.py  product_profile.py  progress_bar.py  progress_card.py  resolve_user_mentions.py  slack_api.py  slack_tools.py  thread_store.py  url_indexer.py  usage_guide.py  vector_store.py
utils/scripts/: bump_version.py  run_release.py  update_version_txt.py
