# ==========================================
# release_config.toml — IBM GenAI Slack Thread Reader and Chat Bot
# ==========================================

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genai-slack-thread-reader-and-chat-bot"
version = "1.0.0"                # base seed; true current version is 2.3.0
description = "IBM GenAI Slack Thread Reader and Chat Bot"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "IBM OSS Support" }]

# ==========================================================
# Semantic-release configuration
# ==========================================================
[tool.semantic_release]
changelog_file = "release-note.md"
changelog_sections = "feature,fix,breaking,chore,docs,style,refactor"
upload_to_pypi = false
commit_parser = "semantic_release.commit_parser:AngularCommitParser"
version_source = "tag"
post_release_hook = "python utils/scripts/update_version_txt.py"
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.branches]
automate-test-branch = {}
# Uncomment your real ones once tested
# dev = {}
# main = {}