# ==========================================
# release_config.toml — IBM GenAI Slack Thread Reader and Chat Bot
# ==========================================

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genai-slack-thread-reader-and-chat-bot"
version = "1.0.0"                # base seed; true current version is 2.3.0
description = "IBM GenAI Slack Thread Reader and Chat Bot"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "IBM OSS Support" }]

# ==========================================================
# Semantic-release configuration
# ==========================================================
[tool.semantic_release]
version_source = "commit"
patch_without_tag = true
commit_parser = "semantic_release.commit_parser:AngularCommitParser"
changelog_file = "release-note.md"
changelog_sections = "feature,fix,breaking,chore,docs,style,refactor"
upload_to_pypi = false
commit_message = "chore(release): {version} [skip ci]"
post_release_hook = "python utils/scripts/update-version-txt.py"

[tool.semantic_release.branches.automate-test-branch]
match = "automate-test-branch"
prerelease = false

# Uncomment/add your real branches when ready:
# [tool.semantic_release.branches.dev]
# match = "dev"
# prerelease = false
#
# [tool.semantic_release.branches.main]
# match = "main"
# prerelease = false